--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
   font-family: "Nunito", sans-serif;
+  overflow: hidden;
 }
 
 * li {
@@ -24,8 +25,8 @@
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100vw;
-  overflow-y: hidden;
   height: 100vh;
+  overflow: hidden;
 }
 
 header {
@@ -39,7 +40,7 @@ header {
           flex-direction: row;
   min-height: 80px;
   max-height: 80px;
-  /* Rectangle */
+  z-index: 100;
   background: #FFFFFF;
   -webkit-box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
@@ -138,6 +139,7 @@ header .menuContainer .socialMedia {
 header .menuContainer .socialMedia a .icon {
   margin: 0 10px;
   width: 20px;
+  min-width: 20px;
   height: 20px;
   background: #FFFFFF;
   border-radius: 20px;
@@ -163,6 +165,8 @@ header .menuContainer .socialMedia a .icon {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: all 2.5s ease;
+  transition: all 2.5s ease;
 }
 
 .lowerBar ul {
@@ -192,6 +196,7 @@ header .menuContainer .socialMedia a .icon {
 .lowerBar ul li a .icon {
   margin: 0 10px;
   width: 20px;
+  min-width: 20px;
   height: 20px;
   background: #F28C8F;
   border-radius: 20px;
@@ -227,7 +232,204 @@ header .menuContainer .socialMedia a .icon {
 }
 
 .app .slider {
-  height: 1500px;
   width: 100%;
+  background: gray;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.app .introduction {
+  margin-top: 40px;
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.app .serviceSelector {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 40px 0;
+}
+
+.app .serviceSelector .title {
+  font-family: "Muli", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  color: #A36166;
+}
+
+.app .serviceSelector .selectorContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.app .serviceSelector .selectorContainer .selector {
+  margin: 20px 10px;
+  background: #E5E5E5;
+  border-radius: 30px;
+  padding: 10px 20px;
+}
+
+.app .serviceSelector .selectorContainer .selector p {
+  font-family: "Muli", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  color: #A36166;
+  min-width: 160px;
+  text-align: center;
+}
+
+.app .serviceSelector .selectorContainer .focus {
+  background: #F28C8F;
+}
+
+.app .serviceSelector .selectorContainer .focus p {
+  color: #FFFFFF;
+}
+
+.app .services {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 2.5s ease;
+  transition: all 2.5s ease;
+}
+
+.app .services .service {
+  margin: 0 60px 60px 60px;
+  -webkit-transition: all 2.5s ease;
+  transition: all 2.5s ease;
+}
+
+.app .services .psyco {
+  -webkit-transform: translateX(425px);
+          transform: translateX(425px);
+}
+
+.app .services .training {
+  -webkit-transform: translateX(425px);
+          transform: translateX(425px);
+}
+
+.app .services .focus {
+  border: 4px solid white;
+  background: #F28C8F;
+}
+
+.app .services .focus .title {
+  color: #FFFFFF;
+}
+
+.app .services .focus .description {
+  color: #FFFFFF;
+}
+
+.app .infoContainer {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 164.5px;
+  border: 4px solid #F28C8F;
+  width: 730px;
+  max-width: 730px;
+  min-width: 730px;
+  min-height: 309px;
+  padding: 40px 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.app .infoContainer .title {
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
+  font-size: 90px;
+  color: #F28C8F;
+  -webkit-transition: all 2.5s ease;
+  transition: all 2.5s ease;
+}
+
+.app .infoContainer .description {
+  font-family: "Muli", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  padding: 20px 50px;
+  color: #A36166;
+  -webkit-transition: all 2.5s ease;
+  transition: all 2.5s ease;
+}
+
+.app .serviceAdition {
+  /* Wanna see more services? Click here */
+  font-family: "Muli", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+  color: #A36166;
+  width: 100vw;
+  text-align: center;
+}
+
+.app .serviceAdition a {
+  text-decoration: none;
+  color: #A36166;
+}
+
+footer {
+  width: 100vw;
+  height: 400px;
+  background: #F28C8F;
 }
 /*# sourceMappingURL=main.css.map */
